Minor fix for footer spacing

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 hr {
-    border: 1px solid rgb(224, 224, 217);
+    border: 1px solid #f7f5f0;
 }
 
 .contentcontainer {
@@ -25,7 +25,7 @@ hr {
 }
 
 .filter_menu {
-    width: 330px;
+    width: 340px;
 }
 
 .row {
